<resources>
    <string name="app_name" translatable="false">पशुधन</string>
    <string name="sp_loginUserUUID" translatable="false">user_uuid</string>
    <string name="sp_userFirstName" translatable="false">userFirstName</string>
    <string name="sp_userLastName" translatable="false">userLastName</string>
    <string name="sp_userAddress" translatable="false">userAddress</string>
    <string name="sp_userPinCode" translatable="false">userPinCode</string>
    <string name="sp_userVillage" translatable="false">userVillage</string>
    <string name="sp_userDistrict" translatable="false">userDistrict</string>
    <string name="sp_userState" translatable="false">userState</string>
    <string name="sp_profileImage" translatable="false">userProfileImage</string>
    <string name="sp_userLatitude" translatable="false">userLatitude</string>
    <string name="sp_userLongitude" translatable="false">userLongitude</string>
    <string name="sp_locale" translatable="false">locale</string>
    <string name="sp_bio" translatable="false">bio</string>
    <string name="EN_Locale" translatable="false">en</string>
    <string name="HI_Locale" translatable="false">hi</string>
    <string name="MR_Locale" translatable="false">mr</string>
    <string name="tryAgainMessage">कृपया दुबारा कोशिश करें</string>
    <string name="nextActivityCTA">आगे बढिये</string>
    <string name="incompleteFormErrorMessage">कृप्या पूरी जानकारी भरे</string>
    <string name="progressDescription">कृप्या प्रतीक्षा करें</string>
    <string name="mainLoginActivity_subHeading">किसानों का असली धन</string>
    <string name="mainLoginActivity_phoneNumberLabel">फ़ोन नंबर</string>
    <string name="mainLoginActivity_phoneNumberPlaceholder">फ़ोन नंबर डाले</string>
    <string name="mainLoginActivity_referralMessage">यदि आपके पास रेफेरल कोड हे तो</string>
    <string name="mainLoginActivity_referralLink"><u><b>यहाँ क्लिक करें</b></u></string>
    <string name="mainLoginActivity_noPhoneNumberErrorMessage">कृप्या फ़ोन नंबर डाले</string>
    <string name="mainLoginActivity_noPhoneNumberErrorAction">नंबर डाले</string>
    <string name="mainLoginActivity_smsQuotaExceededMessage">कुछ समय बाद दुबारा प्रयास करें</string>
    <string name="mainLoginActivity_noPhoneNumberFoundedMessage">कोई फ़ोन नंबर प्राप्त नहीं हुए</string>
    <string name="mainLoginActivity_loginSuccessfulMessage">प्रवेश सफल</string>
    <string name="mainLoginActivity_wrongVerificationCodeMessage">कृप्या सही ओटीपी डाले</string>
    <string name="mainLoginActivity_incompleteVerificationCodeMessage">कृप्या पूरा ओटीपी भरे</string>
    <string name="mainLoginActivity_noCountryCodeErrorMessage">कृप्या कंट्री कोड डालिये +91</string>
    <string name="otpVerificationActivity_resendOTP"><b><u>ओटीपी दोबारा भेजें</u></b></string>
    <string name="otpVerificationActivity_title">ओटीपी</string>
    <string name="otpVerificationActivity_instruction">अपने फ़ोन पैर भेजे गए ओटीपी को दर्ज करें</string>
    <string name="userRegistrationActivity_heading">जानकारी</string>
    <string name="userRegistrationActivity_nameLabel">नाम</string>
    <string name="userRegistrationActivity_firstNamePlaceholder">नाम</string>
    <string name="userRegistrationActivity_lastNamePlaceholder">उपनाम</string>
    <string name="userRegistrationActivity_pinCodeLabel">पिन कोड</string>
    <string name="userRegistrationActivity_pinCodePlaceholder">पिन कोड</string>
    <string name="userRegistrationActivity_addressLabel">पता</string>
    <string name="userRegistrationActivity_addressPlaceholder">पता</string>
    <string name="userRegistrationActivity_villageLabel">गाँव</string>
    <string name="userRegistrationActivity_villagePlaceholder">गाँव</string>
    <string name="userRegistrationActivity_districtLabel">जिला</string>
    <string name="userRegistrationActivity_districtPlaceholder">जिला</string>
    <string name="userRegistrationActivity_stateLabel">राज्य</string>
    <string name="userRegistrationActivity_statePlaceholder">राज्य</string>
    <string name="userRegistrationActivity_registrationSuccessMessage">पंजीकरण पूरा होगया</string>
    <string name="userRegistrationActivity_noLocationFoundMessage">आपका पता प्राप्त नहीं कर पाए | कृप्या अपना पता भरे |</string>
    <string name="pashuSalesActivity_heading">पशु बेचे</string>
    <string name="pashuSalesActivity_animalTypeLabel">कौन सा पशु</string>
    <string name="pashuSalesActivity_animalBreedLabel">नस्ल</string>
    <string name="pashuSalesActivity_animalAgeLabel">उम्र</string>
    <string name="pashuSalesActivity_animalAgePlaceholder">उम्र भरें</string>
    <string name="pashuSalesActivity_animalByaatLabel">ब्यात</string>
    <string name="pashuSalesActivity_animalMilkQuantityLabel">अभी का दूध (प्रति दिन)</string>
    <string name="pashuSalesActivity_animalMilkQuantityPlaceholder">जैसे: 10 लीटर</string>
    <string name="pashuSalesActivity_animalMilkCapacityLabel">दूध की क्षमता (प्रति दिन)</string>
    <string name="pashuSalesActivity_animalMilkCapacityPlaceholder">जैसे: 10 लीटर</string>
    <string name="pashuSalesActivity_animalPriceLabel">मूल्य</string>
    <string name="pashuSalesActivity_animalPricePlaceholder">जैसे: 30,000</string>
    <string name="pashuSalesActivity_animalAddImageLabel">फोटो डाले</string>
    <string name="pashuSalesActivity_animalAddImageDescription">एक अच्छी तस्वीर अपलोड करना महत्वपूर्ण है</string>
    <string name="pashuSalesActivity_animalSelectImageLabel">फोटो चुनें</string>
    <string name="pashuSalesActivity_uploadCTA">अपलोड करे</string>
    <string name="pashuSalesActivity_fileUploadError">फाइल अपलोड नहीं हो पायी</string>
    <string name="pashuSalesActivity_addImageContentDescription">इमेज एडेड</string>
    <string name="pashuSalesActivity_dataUploadSuccess">आपके पशु की जानकारी दर्ज हो गयी है</string>
    <string name="pashuSalesActivity_defaultSpinnerOption">पता नहीं</string>
    <string name="pashuSalesActivity_allImagesNotUploadedErrorMessage">कृप्या तस्वीर अपलोड करे</string>
    <string-array name="pashuSalesActivity_animalByaat">
        <item>ब्यायी नहीं</item>
        <item>पहला (1)</item>
        <item>दूसरा (2)</item>
        <item>तीसरा (3)</item>
        <item>चौथा (4)</item>
        <item>पांचवा (5)</item>
        <item>छठा (6)</item>
        <item>सातवाँ (7)</item>
    </string-array>
    <string name="fragment_pashuBazaar">पशु बाज़ार</string>
    <string name="fragment_pashuKahani">"पशु स्टोरी "</string>
    <string name="fragment_pashuSamwardhan">पशु संवर्धन</string>
    <string name="pashuBazaar_cardDummyTitle"><b>देसी गाय</b></string>
    <string name="pashuBazar_pashuSalesCTA">पशु बेचे</string>
    <string name="pashuBazar_filterCTA">फ़िल्टर</string>
    <string name="pashuBazar_clearFilter">मिटाएँ</string>
    <string name="pashuBazar_clearFilterMessage">फ़िल्टर हटा रहे हैं</string>
    <string name="pashuBazar_filterMessage1">आपको</string>
    <string name="pashuBazar_filterMessage2">दिखा रहे है</string>
    <string name="pashuStory_shareBtnLabel">शेयर करे</string>
    <string name="pashuBazaar_fragmentDummyText">पशु बाज़ार</string>
    <string name="pashuStory_addTextPlaceholder">कुछ टाइप करे</string>
    <string name="pashuStory_addCommentPlaceholder">अपने विचार लिखिए</string>
    <string name="pashuStory_addCommentCTA">कमेंट</string>
    <string name="pashuStory_commentHeading">कॉमेंट</string>
    <string name="profile_image_text">तसवीर डालें</string>
    <string name="profile_bio_text">अपने बारे में कुछ लिखो</string>
    <string name="save_profile">प्रोफाइल सेव करें</string>
    <string name="logout_button">लॉग आउट</string>
    <string name="logout_confirmMessage">क्या आप लोग आउट करना चाहते है</string>
    <string name="yes_button">हाँ</string>
    <string name="no_button">नहीं</string>
    <string-array name="languages">
        <item value="mr">Marathi (मराठी)</item>
        <item value="hi">Hindi (हिंदी)</item>
    </string-array>
    <string name="languageChange">भाषा बदली गयी -</string>
    <string name="yourUploads">आपके अपलोड</string>
    <string name="userUploads">इनके पशु उपलोड्स</string>
    <string name="yourStories">आपके स्टोरी</string>
    <string name="userStories">इनके स्टोरीज़</string>
    <string name="yourFavourites">पसंदीदा पशु</string>
    <string name="about">इनके बारे में</string>
    <string name="notification_null">कोई नए नोटिफिकेशन नहीं</string>
    <string name="upcoming">यह सेक्शन अभी बना रहे है</string>
    <string name="pashuDetails_informationTableTitle">पशु जानकारी</string>
    <string name="pashuDetails_animalTypeLabel">कौन सा पशु</string>
    <string name="pashuDetails_animalBreedLabel">नस्ल</string>
    <string name="pashuDetails_animalAgeLabel">उम्र</string>
    <string name="pashuDetails_animalByaatLabel">ब्यात</string>
    <string name="pashuDetails_animalMilkQuantityLabel">अभी का दूध (प्रति दिन)</string>
    <string name="pashuDetails_animalMilkCapacityLabel">दूध की क्षमता (प्रति दिन)</string>
    <string name="sellerDetailHeading">मालिक</string>
    <string name="sellerDetailNameLabel">नाम</string>
    <string name="sellerDetailPhoneNumberLabel">फ़ोन नंबर</string>
    <string name="sellerDetailCallCTA">कॉल लगाये</string>
    <string name="sellerDetailWhatsappCTA">व्हाट्सएप करे</string>
    <string name="ownerName">नाम: </string>
    <string name="ownerPhone">फ़ोन नंबर: </string>
    <string name="callCTA">कॉल लगाये</string>
    <string name="whatsappCTA">व्हाट्सएप करे</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="noLocationMessage">अपना पता बताये ⟶</string>
    <string name="distanceString" translatable="false">कि.मी.</string>
    <string name="noFavouritesMessage">कोई पसंदीदा पशु नहीं हैं </string>
    <string name="noPostsUploadedMessage">कृपया नए पोस्ट अपलोड करें</string>
    <string name="noStoriesUploadedMessage">कृपया नए स्टोरीज़ अपलोड करें</string>
    <string name="storyLikedTitle">स्टोरी लाइक की गयी है</string>
    <string name="storyLikedMessage">ने आपकी स्टोरी लाइक करी है</string>
    <string name="postClickedTitle">पोस्ट देखा</string>
    <string name="postClickedMessage">ने आपका पोस्ट देखा</string>
    <string name="storyCommentTitle">स्टोरी पर कॉमेंट</string>
    <string name="storyCommentMessage">ने आपकी स्टोरी पर कॉमेंट करा है</string>
    <string name="informationTitle">जानकारी चाहिए</string>
    <string name="informationMessage">आपके पशुओ के बारे में जानकारी चाहते हैं| कृपया whatsapp चेक करें|</string>
    <string name="samachar">पशु समाचार</string>
    <string name="charcha">पशु चर्चा</string>
    <string name="swasthya">पशु स्वास्थ्य</string>
    <string name="samacharHeading">आपके लिए ब्लॉग</string>
    <string name="noBlogsUploadedMessage">कोई ब्लोग्स नहीं है</string>
    <string name="noAnimalsUploadedMessage">कोई पशु नहीं बेचे जा रहे हैं</string>
    <string name="noStoriesMessage">पिछले २४ घंटे में कोई स्टोरी अपलोड नहीं की है</string>
    <string name="comment_null">कोई कॉमेंट नहीं है</string>
    <string name="pickPhotoHeading">फोटो अपलोड करे</string>
    <string name="camera" translatable="false">कैमरा</string>
    <string name="gallery" translatable="false">गैलरी</string>
</resources>