<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.PashuSamwardhanFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userRegistrationHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/fragment_pashuSamwardhan"
            android:textColor="@color/primary"
            android:textSize="@dimen/title" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/samacharButton"
                android:layout_width="144dp"
                android:layout_height="201dp"
                android:contentDescription="@string/pashuSalesActivity_addImageContentDescription"
                android:src="@drawable/animal_view1"
                android:elevation="10dp"
                app:cardCornerRadius="6dp"
                android:layout_gravity="center"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginHorizontal="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:src="@drawable/rectangle95" />

                    <TextView
                        android:id="@+id/samacharText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/samachar"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/button"
                        android:layout_margin="10dp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/charchaButton"
                android:layout_width="144dp"
                android:layout_height="201dp"
                android:contentDescription="@string/pashuSalesActivity_addImageContentDescription"
                android:elevation="10dp"
                android:layout_gravity="center"
                app:cardCornerRadius="6dp"
                android:layout_marginHorizontal="15dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/samacharButton">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:src="@drawable/rectangle96"/>


                    <TextView
                        android:id="@+id/storyButtonText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/charcha"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/button"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/swasthyaButton"
                android:layout_width="144dp"
                android:layout_height="201dp"
                android:contentDescription="@string/pashuSalesActivity_addImageContentDescription"
                android:src="@drawable/animal_view1"
                android:elevation="10dp"
                app:cardCornerRadius="6dp"
                android:layout_gravity="center"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="15dp"
                android:layout_below="@+id/samacharButton">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:src="@drawable/rectangle97"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/swasthya"
                        android:layout_centerInParent="true"
                        android:textSize="@dimen/button"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textAlignment="center" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>



    </LinearLayout>


</FrameLayout>